WEB_currency_exchange/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webexchange
  labels:
    app: webexchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webexchange
  template:
    metadata:
      labels:
        app: webexchange
    spec:
      containers:
        - name: webexchange
          image: gcr.io/$PROJECT_ID/webexchange:$COMMIT_SHA
          ports:
            - containerPort: 80
