WEB_currency_exchange/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webexchange
spec:
  selector:
    app: webexchange
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
