WEB_currency_exchange/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currencyexchange-ingress
spec:
  defaultBackend:
    service:
      name: currencyexchange
      port:
        number: 8100
